Fix table styling

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
       </a>
     </div>
     <input class="side-menu" type="checkbox" id="side-menu">
-    <label class="hamb" for="side-menu"><span class="hamb-line"></span><span class="hamb-line-text">Menu</span></label>
+    <label class="hamb" for="side-menu"><span class="hamb-line"></span><span class="hamb-line-text visually-hidden">Menu</span></label>
     <nav class="headerLinks">
         <ul>
             {%- for link in site.termina-plex.header_links %}
