--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,18 @@ layout: base
 
   <section class="postMetadata">
     <dl>
+      {%- if page.author and page.author.size > 0 -%}
+      <dt>authors</dt>
+      <dd>
+        {{- page.author | join: ", " -}}
+      </dd>
+      {%- endif -%}
+      {%- if page.date -%}
+      <dt>published</dt>
+      <dd>
+        <time class="postDate" datetime="{{ page.date | date: '%Y-%m-%d' }}">{{ page.date | date: date_format }}</time>
+      </dd>
+      {%- endif -%}
       {%- if page.categories and page.categories.size > 0 -%}
       <dt>categories</dt>
       <dd>
@@ -26,13 +38,6 @@ layout: base
           {%- capture tag_name -%}{{ tag }}{%- endcapture -%}
           <a href="{{ site.baseurl | append:'/tag/' | append:tag_name }}">#{{ tag }}</a>
         {%- endfor -%}
-      </dd>
-      {%- endif -%}
-
-      {%- if page.date -%}
-      <dt>published</dt>
-      <dd>
-        <time class="postDate" datetime="{{ page.date | date: '%Y-%m-%d' }}">{{ page.date | date: date_format }}</time>
       </dd>
       {%- endif -%}
     </dl>
