--- a/_sass/termina-plex/layout/header.scss
+++ b/_sass/termina-plex/layout/header.scss
@@ -34,6 +34,7 @@
       a {
         color: var(--text-color);
         text-decoration: none;
+        text-transform: lowercase;
       }
     }
   }
