--- a/_sass/termina-plex/pages/base.scss
+++ b/_sass/termina-plex/pages/base.scss
@@ -47,6 +47,10 @@ body div.content {
   }
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: $header-font-family;
+}
+
 article {
   font-size: #{$base-font-size};
 }
