Theme the user/host header, add blog_path setting support, changed visited link color

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,15 @@
   <div class="header">
     <div>
       <a class="terminal" href="{{ '/' | relative_url }}">
-        <span>{{ site.termina-plex.username }}@{{ site.termina-plex.hostname }} ~ $</span>
+        {%- if site.termina-plex.username and site.termina-plex.hostname -%}
+        <span class="terminalUser">{{ site.termina-plex.username }}</span><span class="terminalAt">@</span><span class="terminalHost">{{ site.termina-plex.hostname }}</span>:<span class="terminalPath">~</span>$</span>
+        {%- elsif site.termina-plex.username -%}
+        <span class="terminalUser">{{ site.termina-plex.username}}</span>:<span class="terminalPath">~</span>$</span>
+        {%- elsif site.termina-plex.hostname -%}
+        <span class="terminalHost">{{ site.termina-plex.hostname }}</span>:<span class="terminalPath">~</span>$</span>
+        {%- else %}
+        <span>{{ site.title }}</span>
+        {%- endif -%}
       </a>
     </div>
     <input class="side-menu" type="checkbox" id="side-menu">
