--- a/_sass/termina-plex/layout/header.scss
+++ b/_sass/termina-plex/layout/header.scss
@@ -53,6 +53,12 @@
   text-decoration: none;
 }
 
+.terminal {
+  .terminalUser, .terminalAt, .terminalHost, .terminalPath {
+    color: var(--link-color);
+  }
+}
+
 .hamb {
   cursor: pointer;
   float: right;
