--- a/_sass/termina-plex/pages/base.scss
+++ b/_sass/termina-plex/pages/base.scss
@@ -41,9 +41,12 @@
 body div.content {
 
   a:link,
-  a:active,
-  a:visited {
+  a:active {
     color: var(--link-color);
+  }
+
+  a:visited {
+    color: var(--link-visited-color);
   }
 }
 
