--- a/_sass/termina-plex/themes.scss
+++ b/_sass/termina-plex/themes.scss
@@ -28,7 +28,7 @@
   --link-color: #0043ce;
   --link-active-color: #0043ce;
   --link-hover-color: #0043ce;
-  --link-visited-color: #0043ce;
+  --link-visited-color: #6929c4;
 
   // Highlight Colors for Light Mode
   --highlight-c:     #998; // Comment
@@ -117,12 +117,12 @@
     --table-header-background-color: #161616;
     --table-header-border-color: #161616;
     --table-text-color: #ffffff;
-    --table-zebra-color: #161616;
+    --table-zebra-color: #393939;
 
-    --link-color: #78a9ff;
-    --link-active-color: #78a9ff;
-    --link-hover-color: #78a9ff;
-    --link-visited-color: #78a9ff;
+    --link-color: #a6c8ff;
+    --link-active-color: #a6c8ff;
+    --link-hover-color: #a6c8ff;
+    --link-visited-color: #d4bbff;
 
     // Highlight Colors for Dark Mode
     --highlight-c:     #545454; // Comment
@@ -211,12 +211,12 @@
   --table-header-background-color: #161616;
   --table-header-border-color: #161616;
   --table-text-color: #ffffff;
-  --table-zebra-color: #161616;
+  --table-zebra-color: #393939;
 
-  --link-color: #78a9ff;
-  --link-active-color: #78a9ff;
-  --link-hover-color: #78a9ff;
-  --link-visited-color: #78a9ff;
+  --link-color: #a6c8ff;
+  --link-active-color: #a6c8ff;
+  --link-hover-color: #a6c8ff;
+  --link-visited-color: #d4bbff;
 
   // Highlight Colors for Dark Mode
   --highlight-c:     #545454; // Comment
