Add support for centered tables via config

--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -1,3 +1,7 @@
+{%- if site.termina-plex.centered_tables -%}
+<link rel="stylesheet" href="{{ '/assets/css/centered-table.css' | relative_url }}">
+{%- endif -%}
+
 {%- if page.title -%}
 <title>{{ site.title }} | {{ page.title }}</title>
 {%- else -%}
