Tweak font size for h2 and h3 headings in post excerpts

--- a/_sass/termina-plex/layout/posts.scss
+++ b/_sass/termina-plex/layout/posts.scss
@@ -47,6 +47,16 @@
   text-decoration: none;
   color: var(--text-color);
   clear: both;
+
+  h2 {
+    font-size: 1.1rem !important;
+    font-weight: 700;
+  }
+
+  h3 {
+    font-size: 1.05rem !important;
+    font-weight: 500;
+  }
 }
 
 .headerContainer {
