Adding support for author pronouns for index layout

--- a/_sass/termina-plex/pages/index.scss
+++ b/_sass/termina-plex/pages/index.scss
@@ -10,3 +10,16 @@
 .indexHeader {
   font-size: 3em;
 }
+
+.indexHeader .authorPronouns {
+  font-style: italic;
+  font-size: 50%;
+}
+
+.authorPronouns::before {
+  content: "("
+}
+
+.authorPronouns::after {
+  content: ")"
+}
