--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -10,7 +10,10 @@
         <main class="main">
           <div class="indexWrapper">
             <div>
-              <h1 class="indexHeader">{{ site.author.name }}</h1>
+              <h1 class="indexHeader">
+                {{ site.author.name }}
+                {%- if site.author.pronouns -%}<div class="authorPronouns">{{ site.author.pronouns }}</div>{%- endif -%}
+              </h1>
             </div>
             {%- if site.termina-plex.social_links -%}
             <div class="socialNavbar">
