--- a/_sass/termina-plex/main.scss
+++ b/_sass/termina-plex/main.scss
@@ -1,8 +1,8 @@
 @charset "utf-8";
 
-@forward "ibm-plex";
+@forward "fonts";
 @forward "highlight";
 @forward "themes";
 
-@use "layout" as *;
-@use "pages" as *;
+@forward "layout";
+@forward "pages";
