Correct tag/category list padding/margin

--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -8,7 +8,7 @@ layout: base
     <h1>Category: {{ page.category }}</h1>
   </header>
 
-  <div class="postsEntries">
+  <div class="tagsEntries">
   {%- if site.categories[page.category] -%}
     {%- for post in site.categories[page.category] %}
     <div class="postInfo">
