--- a/_sass/termina-plex/_layout.scss
+++ b/_sass/termina-plex/_layout.scss
@@ -289,6 +289,7 @@ div#theme-toggle {
 
 .postInfo:last-of-type {
   border-bottom: 1px solid rgba(127, 127, 127, 0.5);
+  padding-bottom: 2rem;
 }
 
 .postDate {
